--- a/apps/portfolio/src/styles.scss
+++ b/apps/portfolio/src/styles.scss
@@ -34,7 +34,7 @@ section {
   overflow: hidden;
 
   & > * {
-    max-width: 1024px;
+    max-width: 960px;
     margin: auto;
     flex: 1;
   }
